--- a/public/project-admin-views/assets/less/custom.less
+++ b/public/project-admin-views/assets/less/custom.less
@@ -648,7 +648,7 @@ ul.parsley-errors-list li {
 {
 width: 100%; 
 overflow-x:scroll;  
-padding-left:100px; 
+padding-left:150px; 
 overflow-y:visible;
 padding-bottom:1px; 
 border: 1px solid #f1f1f1;
@@ -680,13 +680,15 @@ border-bottom:none;
 }
 .sticky-table-outer-div .table .headcol {
     position:absolute; 
-    width:100px !important; 
+    width:150px !important; 
     left:1px;
     top:auto;
     border-right: 0px none black;  
     background: #fff;             
     margin-right: 10px;
     text-align: left;
+    height: 30px;
+    overflow: hidden;
     /*margin-top:-3px; compensate for top border*/
 } 
 .th-headcol
